[package]
name = "hectango"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
dotenvy = "0.15.7"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
